# french-ai-law-guru

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  LANGSMITH_SETUP.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_streamlit.py  setup.py  test_hf_token.py
.github/workflows/: ci.yml
app/: app.py  faq.json  hf_client.py  utils.py
faq_chatbot/: agents.py  app.py  chat_handler.py  embeddings.npy  hf_client.py  utils.py
legal_ai_assistant/: agents.py  app.py  chat_handler.py  config.py  local_models.py  utils.py
notebooks/: PDFembedding.ipynb
tests/: README.md  test_advanced.py  test_comprehensive.py  test_generic.py  test_utils.py
